# Alpha_Evolve

./: .gitignore  .pre-commit-config.yaml  Detailed _Implementation_Representation_Guide.md  Dockerfile  README.md  agents.md  alpha_backtest_results.csv  alpha_evolve_crypto_ea.py  alpha_program_core.py  backtest_alpha.py  backtest_evolved_alphas.py  config.py  docker-compose.yml  evolve_alphas.py  pyproject.toml  requirements.txt  run_pipeline.py  sc2.py  winner.txt
UI_alphas_lab/: App.tsx  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
alpha-evolve-pipeline-UI/: App.tsx  README.md  constants.ts  index.html  iterative.ts  metadata.json  package.json  types.ts
alpha_framework/: __init__.py  alpha_framework_op.py  alpha_framework_operators.py  alpha_framework_program.py  alpha_framework_types.py  program_logic_generation.py  program_logic_variation.py  utils.py
backtesting_components/: __init__.py  core_logic.py  data_handling_bt.py  performance_metrics.py
baselines/: ga_tree.py  rank_lstm.py  rsr.py
configs/: Download_try.toml  all_params.toml  bench_sp500_full.toml  bench_sp500_small_ci.toml  bench_sp500_small_quick.toml  correlated_alphas_run.toml  crypto.toml  crypto_4h_fast.toml  quiet.toml  sp500.toml  sp500_bullish_sharpe.toml  sp500_small.toml
dashboard-ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
data_sp500/: README.md
data_sp500_small/: README.md
docs/: EvolutionParams.md  ParametersUI.md  README.md  backend_api.md  dashboard_ui_build.md  dev-automation-roadmap.md  first_run_walkthrough.md  frontier-upgrade-plan.md  improvement_plan.md  iteration-log.md  newcomer-guide.md  react-ui-parity-backlog.md  running_tests_instructions.md  self_evolution.md
evolution_components/: __init__.py  data_handling.py  diagnostics.py  evaluation_logic.py  hall_of_fame_manager.py  moea.py  qd_archive.py  utils.py
pydantic/: README.md  __init__.py  _stub.py
pytest_asyncio/: README.md
scripts/: auto_improve.py  backtest_diagnostics_plot.py  benchmark_quick_smoke.sh  benchmark_sp500.py  benchmark_sp500.sh  cleanup_runs.py  codex_watch.py  diagnostics_plot.py  diagnostics_report.py  fetch_sp500_data.py  iterative_dashboard_server.py  make_sp500_subset.py  monitor_logs.sh  recommended_crypto_pipeline.sh  recommended_pipeline.sh  recommended_sp500_pipeline.sh  run_dashboard.py  run_overnight_long.sh  run_pipeline_all_args.sh  run_sp500_data.sh  run_sp500_pipeline.sh  run_tests_sandbox.sh  self_evolve.py  selfplay.py  setup_env.sh  smoke_dashboard_docker.sh  smoke_run.sh  start_codex_mode.sh  stop_codex_mode.sh  test  train_ga_tree.py  train_rank_lstm.py  train_rsr.py  typecheck  update_requirements.py  update_requirements.sh  verify.sh
self_evolution/: agent.py
tests/: conftest.py  test_adaptive_probabilities.py  test_align_cache.py  (+49 more)
(+188 files in other folders)
