[project]
name = "alpha-evolve"
version = "0.1.0"
description = "Alpha Evolve, by singaporean finance bros and o3"
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "datetime>=5.5",
    "fastapi>=0.116.1",
    "lxml>=6.0.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "pytest>=8.4.0",
    "ruff>=0.11.10",
    "sse-starlette>=3.0.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]

[project.scripts]
alpha-evolve-pipeline = "run_pipeline:main"
alpha-evolve-backtest = "backtest_evolved_alphas:main"
