[project]
name = "alpha-evolve"
version = "0.1.0"
description = "Alpha Evolve, by singaporean finance bros and o3"
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "Django>=5.1",
    "datetime>=5.5",
    "httpx>=0.27.2",
    "lxml>=6.0.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pydantic>=2.7.0",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11.0",
    "ruff>=0.11.10",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]

[project.scripts]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
files = [
    "scripts/dashboard_server",
    "tests/test_dashboard_routes.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test that uses asyncio runtimes.",
]
