[project]
name = "alpha-evolve"
version = "0.1.0"
description = "Alpha Evolve, by singaporean finance bros and o3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1",
    "datetime>=5.5",
    "httpx>=0.27.2",
    "lxml>=6.0.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pydantic>=2.7.0",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11.0",
    "ruff>=0.11.10",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "watchfiles>=0.24.0",
    "yfinance>=0.2.65",
]

[project.scripts]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["alpha_evolve*"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
files = [
    "src/alpha_evolve/dashboard",
    "tests/test_dashboard_routes.py",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
per-file-ignores = { "scripts/**/*.py" = ["E402"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test that uses asyncio runtimes.",
]
